# Code-Sandbox

./: .env  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  docker-diagnose.sh  docker_verify.py  inspector-config.json  inspector_guide.py  manual_test.py  pyproject.toml  quick_test.py  test-docker.sh
src/: __init__.py  server.py
src/sandbox/: __init__.py  cache.py  engine.py  plots.py  security.py  types.py
src/utils/: logging.py
tests/: __init__.py  test_benchmark.py  test_cache.py  test_engine.py  test_plots.py  test_security.py  test_server.py
